--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "devDependencies": {
     "vitepress": "^1.1.0",
-    "vitepress-auto-sidebar-plugin": "^0.2.4"
+    "vitepress-sidebar": "^1.24.1"
   },
   "scripts": {
     "docs:dev": "vitepress dev",
