--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "devDependencies": {
+    "busuanzi.pure.js": "^1.0.3",
+    "canvas-confetti": "^1.9.3",
     "medium-zoom": "^1.1.0",
-    "vitepress": "^1.1.0",
+    "vitepress": "^1.3.3",
     "vitepress-sidebar": "^1.24.1",
     "vue": "^3.4.38"
   },
